--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "build-prod": "parcel build src/index.html"
   },
   "devDependencies": {
+    "@types/node": "^15.12.0",
     "nodemon": "^2.0.7",
     "parcel-bundler": "^1.12.5",
     "prettier": "^2.3.0",
