--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "author": "",
   "license": "ISC",
   "scripts": {
-    "clean": "rm dist/bundle.js",
+    "clean": "rm -rf dist .cache",
     "start": "parcel src/index.ts --target node",
     "dev": "npx nodemon dist/index.js",
     "build-prod": "parcel build src/index.html"
